Rearranged HTML markup
* moved scripts to bottom of page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
     <meta charset="utf-8">
     <title>Home</title>
     <link rel="icon" href="./images/kali_icon.ico">
-    <link rel="stylesheet" type="text/css" href="./styles/main.css">
-    <script src="./scripts/scripts.js"></script>
     <meta name="author" content="Dallin Snell">
-    <!-- Bootstrap links -->
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <!-- bootstrap stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -49,9 +46,16 @@
     <!-- remove the footer positioning if the page scrolls -->
     <footer class="pad" style="position: absolute; right: 0; bottom: 0;">
       <div class="right-align">
-        <p>Updated: 15 MAY 2018</p>
+        <p>Updated: 20 JUL 2018</p>
       </div>
     </footer>
+
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- my scripts -->
+    <script src="./scripts/scripts.js"></script>
   </body>
 </html>
 
