--- a/tv/index.html
+++ b/tv/index.html
@@ -14,23 +14,26 @@
 
     <main>
     <pre>
-Volume in drive E is FLEIJA
-Volume Serial Number is 2A7E-CB8B
+ Volume in drive E is FLEIJA
+ Volume Serial Number is 2A7E-CB8B
 
-Directory of E:\.dat
+ Directory of E:\.dat
 
 _index_command.txt
-_index~01-Mar-17.txt
-_index~06-Apr-18.txt
-_index~11-Jan-18.txt
-_index~14-Aug-17.txt
-_index~18-May-18.txt
-_index~22-Apr-18.txt
-_index~22-Oct-17.txt
-_index~23-May-17.txt
-_index~24-Aug-17.txt
-_index~24-Sep-17.txt
-_index~29-Jul-17.txt
+_index~17Aug14.txt
+_index~17Aug24.txt
+_index~17Jul29.txt
+_index~17Mar01.txt
+_index~17May23.txt
+_index~17Oct22.txt
+_index~17Sep24.txt
+_index~18Apr06.txt
+_index~18Apr22.txt
+_index~18Jan11.txt
+_index~18Jul06.txt
+_index~18May18.txt
+_index~18May29.txt
+50 First Dates (2004) [1080p].mp4
 A Bugs Life (1998).mp4
 A Walk to Remember (2002) [1080p].mp4
 [Agents of S.H.I.E.L.D. S01]
@@ -52,6 +55,8 @@ Batman Begins (2005) [720p].mkv
 Batman- The Dark Knight (2008) [720p].mkv
 [Batman v Superman- Dawn of Justice EXTENDED (2016) [1080p]]
 Beauty and the Beast (1991).avi
+Beauty and the Beast (2017) [1080p].mp4
+Bee Movie (2007).mkv
 Big Hero 6 (2014) [720p].mp4
 [Black Panther (2018) [1080p]]
 [BN S01]
@@ -63,6 +68,7 @@ Big Hero 6 (2014) [720p].mp4
 [BN S07]
 Bolt (2008).avi
 Brave (2012) [1080p].mp4
+[Brooklyn Nine Nine S01]
 Captain America- Civil War (2016) [1080p].mp4
 Captain America- First Avenger (2011) [720p].mkv
 Captain America- The Winter Soldier (2014) [1080p].mp4
@@ -112,6 +118,7 @@ Gnomeo and Juliet (2011) [720p].mkv
 Gods of Egypt (2016) [720p] {Dual Audio}.mkv
 Groundhog Day (1993) [720p].mp4
 Guardians of the Galaxy (2014) [1080p].mkv
+Guardians of the Galaxy Vol. 2 (2017) [1080p].mp4
 [H50 S01]
 [H50 S02]
 [H50 S03]
@@ -129,6 +136,7 @@ Hercules (2014) [1080p].mp4
 Hobbit- An Unexpected Journey EXTENDED (2012) [1080p].mp4
 Hobbit- Battle of the Five Armies EXTENDED (2014) [1080p].mkv
 Hobbit- The Desolation of Smaug EXTENDED (2013) [1080p].mp4
+[How I Met Your Mother S01]
 How To Train Your Dragon (2010).avi
 Huntsman- Winters War (2016).avi
 I am Legend (2007) [720p].mkv
@@ -136,10 +144,12 @@ I Robot (2004) [720p].mkv
 I, Frankenstein (2014) [720p].mp4
 Inception (2010).avi
 Incredibles (2004) [720p].mkv
+Independance Day (1996) [720p].avi
 Indiana Jones- Kingdom of the Crystal Skull (2008) [720p].mkv
 Indiana Jones- Last Crusade (1989) [720p].mkv
 Indiana Jones- Raiders of the Lost Ark (1981) [720p].mkv
 Indiana Jones- Temple of Doom (1984) [720p].mkv
+Inside Out (2015) [1080p].mp4
 Into the Woods (2014) [1080p].mp4
 Iron Man (2008).avi
 Iron Man 2 (2010).avi
@@ -148,6 +158,7 @@ Jack Reacher (2012) [1080p].mp4
 [Jack Ryan Shadow Recruit (2014) [1080p]]
 Journey to the Center of the Earth (2008) [1080p].mp4
 Jumanji Welcome to the Jungle (2017) [1080p].mp4
+Keeping Up with the Joneses (2016).avi
 King Arthur Legend of the Sword (2017) [1080p].mp4
 Kung Fu Panda (2008).mkv
 Kung Fu Panda 2 (2011) [1080p].mkv
@@ -189,6 +200,7 @@ Now You See Me 2 (2016) [1080p].mkv
 Oscar (1991) [720p].mp4
 Pacific Rim (2013) [720p].mp4
 Penguins of Madagascar (2014) [1080p].mp4
+Pete's Dragon (2016) [1080p].mp4
 Pirates of the Caribbean I- Curse of the Black Pearl (2003) [720p].mkv
 Pirates of the Caribbean II- Dead Mans Chest (2006) [720p].mkv
 Pirates of the Caribbean III- At Worlds End (2007) [720p].mkv
@@ -199,10 +211,10 @@ Quest For Camelot (1998).avi
 Real Steel (2011) [1080p].mkv
 Red (2010) [1080p].mp4
 Red 2 (2013) [720p].mp4
+Remember the Titans (2000) [1080p].mp4
 Robin Hood (1973) [480p].mkv
 Robots (2005) [720p].mp4
 Rogue One (2016) [1080p].mkv
-Scorpion King (2002).avi
 Seven Pounds (2008) [1080p].mp4
 Seventh Son (2014) [720p].mp4
 Shakespeare In Love (1998) [720p].mkv
@@ -229,6 +241,7 @@ Stealth (2005) [720p].mkv
 [Stranger Things S02]
 Support Your Local Sheriff (1969) [720p].mp4
 Tangled (2010) [1080p].mp4
+Tarzan (1999) [1080p].mp4
 [The A Team EXTENDED (2010)]
 The Addams Family (1991) [720p].mp4
 [The Big Bang Theory S01]
@@ -242,10 +255,12 @@ The Bourne Ultimatum (2007) [720p].mkv
 The Count of Monte Cristo (2002) [720p].mkv
 The Da Vinci Code (2006).avi
 The Dark Tower (2017) [1080p].mp4
+The Darkest Hour (2017) [720p].avi
 The Fate of the Furious (2017) [1080p].mp4
 The Forbidden Kingdom (2008).avi
 The Greatest Showman (2017) [1080p].mp4
 The Hunchback of Notre Dame (1996) [720p].mp4
+The Jazz Singer (1980).mp4
 The Jungle Book (2016) [720p].mp4
 The Kid (2000).avi
 The Legend of Tarzan (2016).avi
@@ -262,6 +277,7 @@ The Phantom of the Opera (2004) [720p].mp4
 The Princess and the Frog (2009) [720p].mp4
 The Princess Bride (1987) [720p].mp4
 The Proposal (2009) [1080p].mp4
+The Scorpion King (2002) [720p].mp4
 The Secret Life of Walter Mitty (2013) [1080p].mp4
 The Sorcerers Apprentice (2010).avi
 The Sound of Music (1965) [1080p].mp4
@@ -286,6 +302,7 @@ WALL-E (2008) [1080p].mp4
 War For the Planet of the Apes (2017) [1080p].mp4
 [Westworld S01]
 [Westworld S02]
+When Sparks Fly (2014) [720p].mp4
 White House Down (2013) [720p].mkv
 Wonder Woman (2017) [1080p].mp4
 Wrath of the Titans (2012) [1080p].mp4
@@ -297,9 +314,8 @@ X-Men- Days of Future Past {The Rogue Cut} (2014) [1080p].mkv
 X-Men First Class (2011) [720p].mp4
 X-Men Origins Wolverine (2009) [1080p].mp4
 X-Men The Last Stand (2006) [1080p].mp4
-         203 File(s) 273,191,609,783 bytes
-          75 Dir(s)  3,104,351,191,040 bytes free
-
+             218 File(s) 292,891,698,637 bytes
+              77 Dir(s)  3,066,884,521,984 bytes free
    </pre>
     </main>
 
