TV page updated

--- a/tv/index.html
+++ b/tv/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TV - 21 AUG 18</title>
+    <title>TV - 10 NOV 18</title>
     <!--<link rel="stylesheet" href="">-->
 </head>
 
@@ -14,6 +14,9 @@
 
     <main>
     <pre>
+    10 NOV 18
+    
+    
  Volume in drive E is FLEIJA
  Volume Serial Number is 2A7E-CB8B
 
@@ -29,6 +32,7 @@ _index~17Oct22.txt
 _index~17Sep24.txt
 _index~18Apr06.txt
 _index~18Apr22.txt
+_index~18Aug21.txt
 _index~18Jan11.txt
 _index~18Jul06.txt
 _index~18May18.txt
@@ -36,6 +40,7 @@ _index~18May29.txt
 50 First Dates (2004) [1080p].mp4
 A Bugs Life (1998).mp4
 A Walk to Remember (2002) [1080p].mp4
+A Wrinkle In Time (2018) [720p].mp4
 [Agents of S.H.I.E.L.D. S01]
 [Agents of S.H.I.E.L.D. S02]
 [Agents of S.H.I.E.L.D. S03]
@@ -48,6 +53,7 @@ Armageddon (1998) [720p].mkv
 Atlantis (2001).avi
 Avengers (2012) [1080p].mp4
 Avengers- Age of Ultron (2015) [1080p].mp4
+Avengers- Infinity War (2018) [720p].mkv
 [Ballers S01]
 [Ballers S02]
 [Ballers S03]
@@ -77,6 +83,7 @@ Central Intelligence (2016).avi
 Cinderella (2015) [1080p].mp4
 Clash of the Titans (2010) [720p].mkv
 Cool Runnings (1993) [1080p].mp4
+Corpse Bride (2005) [720p].mp4
 [DB]
 Despicable Me (2010) [1080p].mp4
 Divergent (2014) [720p].mp4
@@ -107,6 +114,8 @@ Fast and Furious 4 (2009) [1080p].mp4
 Fast and Furious 5 (2011) [1080p].mp4
 Fast and Furious 6 (2013) [1080p].mp4
 Fast and Furious 7 (2015).mp4
+Ferris Buellers Day Off (1986) [1080p].mp4
+Fireproof (2008) [1080p].mp4
 Flatliners (2017) [1080p].mp4
 Footloose (1984) [720p].mkv
 [FP-BA S01]
@@ -124,6 +133,7 @@ Guardians of the Galaxy Vol. 2 (2017) [1080p].mp4
 [H50 S03]
 [H50 S04]
 [H50 S05]
+[H50 S08]
 Harry Potter I - The Philosophers Stone (2001) [720p].mkv
 Harry Potter II - The Chamber of Secrets (2002) [720p].mkv
 Harry Potter III - The Prisoner of Azkaban (2004) [720p].avi
@@ -136,7 +146,16 @@ Hercules (2014) [1080p].mp4
 Hobbit- An Unexpected Journey EXTENDED (2012) [1080p].mp4
 Hobbit- Battle of the Five Armies EXTENDED (2014) [1080p].mkv
 Hobbit- The Desolation of Smaug EXTENDED (2013) [1080p].mp4
+Hotel Transylvania (2012) [1080p].mp4
 [How I Met Your Mother S01]
+[How I Met Your Mother S02]
+[How I Met Your Mother S03]
+[How I Met Your Mother S04]
+[How I Met Your Mother S05]
+[How I Met Your Mother S06]
+[How I Met Your Mother S07]
+[How I Met Your Mother S08]
+[How I Met Your Mother S09]
 How To Train Your Dragon (2010).avi
 Huntsman- Winters War (2016).avi
 I am Legend (2007) [720p].mkv
@@ -158,6 +177,7 @@ Jack Reacher (2012) [1080p].mp4
 [Jack Ryan Shadow Recruit (2014) [1080p]]
 Journey to the Center of the Earth (2008) [1080p].mp4
 Jumanji Welcome to the Jungle (2017) [1080p].mp4
+Jurassic World- Fallen Kingdom (2018) [720p].mp4
 Keeping Up with the Joneses (2016).avi
 King Arthur Legend of the Sword (2017) [1080p].mp4
 Kung Fu Panda (2008).mkv
@@ -188,15 +208,15 @@ My Fair Lady (1964) [1080p].mp4
 [NCIS- LA S01 (incomplete)]
 [NCIS- LA S04 (incomplete)]
 [NCIS- LA S05]
-[NCIS- LA S06 (incomplete)]
+[NCIS- LA S06]
 [NCIS- LA S07 (incomplete)]
 [NCIS- LA S08]
 [NCIS- NO S01]
 [NCIS S01]
 [NCIS S02 (incomplete)]
-NCIS-LA S06 online.txt
 Now You See Me (2013) [1080p].mp4
 Now You See Me 2 (2016) [1080p].mkv
+Oceans Eight (2018) [720p].mkv
 Oscar (1991) [720p].mp4
 Pacific Rim (2013) [720p].mp4
 Penguins of Madagascar (2014) [1080p].mp4
@@ -208,10 +228,12 @@ Pirates of the Caribbean IV- On Stranger Tides (2011) [720p].mkv
 [PM]
 Prince of Persia- Sands of Time (2010).avi
 Quest For Camelot (1998).avi
+Ready Player One (2018) [1080p].mp4
 Real Steel (2011) [1080p].mkv
 Red (2010) [1080p].mp4
 Red 2 (2013) [720p].mp4
 Remember the Titans (2000) [1080p].mp4
+Rio (2011) [1080p].mp4
 Robin Hood (1973) [480p].mkv
 Robots (2005) [720p].mp4
 Rogue One (2016) [1080p].mkv
@@ -227,6 +249,7 @@ Shark Tale (2004).avi
 [Sherlock S04]
 Shrek (2001) [720p].mp4
 Shrek 2 (2004) [1080p].mp4
+Skyscraper (2018) [1080p].mp4
 Source Code (2011) [1080p].mkv
 Spider-man (2002).avi
 Spider-man 2 (2004).avi
@@ -254,6 +277,7 @@ The Bourne Supremacy (2004) [720p].mkv
 The Bourne Ultimatum (2007) [720p].mkv
 The Count of Monte Cristo (2002) [720p].mkv
 The Da Vinci Code (2006).avi
+The Dark Knight Rises (2012) [1080p].m4v
 The Dark Tower (2017) [1080p].mp4
 The Darkest Hour (2017) [720p].avi
 The Fate of the Furious (2017) [1080p].mp4
@@ -272,7 +296,15 @@ The Mummy (1999) [1080p].mp4
 The Mummy (2017) [1080p].mp4
 The Mummy Returns (2001) [1080p].mp4
 The Mummy Tomb of The Dragon Emperor (2008) [1080p].mp4
-[The Office S01]
+[The Office S01 (incomplete)]
+[The Office S02]
+[The Office S03]
+[The Office S04]
+[The Office S05]
+[The Office S06]
+[The Office S07]
+[The Office S08]
+[The Office S09]
 The Phantom of the Opera (2004) [720p].mp4
 The Princess and the Frog (2009) [720p].mp4
 The Princess Bride (1987) [720p].mp4
@@ -284,6 +316,7 @@ The Sound of Music (1965) [1080p].mp4
 The Terminal (2004) [1080p].mp4
 The Terminator (1984) [1080p].mp4
 [This Is Us S01]
+[This is Us S02]
 Thor (2011) [1080p].mp4
 Thor- Dark World (2013) [720p].mkv
 Thor Ragnarok (2017) [1080p].mkv
@@ -314,8 +347,9 @@ X-Men- Days of Future Past {The Rogue Cut} (2014) [1080p].mkv
 X-Men First Class (2011) [720p].mp4
 X-Men Origins Wolverine (2009) [1080p].mp4
 X-Men The Last Stand (2006) [1080p].mp4
-             218 File(s) 292,891,698,637 bytes
-              77 Dir(s)  3,066,884,521,984 bytes free
+Zootopia (2016) [1080p].mp4
+             231 File(s) 320,525,708,594 bytes
+              95 Dir(s)  2,930,363,072,512 bytes free
    </pre>
     </main>
 
