--- a/tv/index.html
+++ b/tv/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TV - 10 NOV 18</title>
+    <title>TV - 18 DEC 18</title>
     <!--<link rel="stylesheet" href="">-->
 </head>
 
@@ -14,7 +14,7 @@
 
     <main>
     <pre>
-    10 NOV 18
+    18 DEC 18
     
     
  Volume in drive E is FLEIJA
@@ -37,6 +37,7 @@ _index~18Jan11.txt
 _index~18Jul06.txt
 _index~18May18.txt
 _index~18May29.txt
+_index~18Nov10.txt
 50 First Dates (2004) [1080p].mp4
 A Bugs Life (1998).mp4
 A Walk to Remember (2002) [1080p].mp4
@@ -141,11 +142,13 @@ Harry Potter IV - The Goblet of Fire (2005) [720p].mkv
 Harry Potter V - The Order of the Pheonix (2007) [720p].mkv
 Harry Potter VI - The Half Blood Prince (2009) [720p].mkv
 Harry Potter VII - Deathly Hallows Part I (2010) [720p].mkv
+Hatari! (1962) [1080p].mp4
 Hercules (1997) [720p].mp4
 Hercules (2014) [1080p].mp4
 Hobbit- An Unexpected Journey EXTENDED (2012) [1080p].mp4
 Hobbit- Battle of the Five Armies EXTENDED (2014) [1080p].mkv
 Hobbit- The Desolation of Smaug EXTENDED (2013) [1080p].mp4
+Hot Rod (2007) [1080p].mp4
 Hotel Transylvania (2012) [1080p].mp4
 [How I Met Your Mother S01]
 [How I Met Your Mother S02]
@@ -184,6 +187,7 @@ Kung Fu Panda (2008).mkv
 Kung Fu Panda 2 (2011) [1080p].mkv
 [Legion S01]
 Lego Batman- The Movie (2017) [720p].mkv
+Les Mis‚rables (2012) [1080p].mp4
 [Life S01]
 [Life S02]
 Lilo and Stitch (2002).mkv
@@ -193,6 +197,7 @@ Lord of the Rings- The Return of the King EXTENDED (2003) [1080p].mp4
 Lord of the Rings- The Two Towers EXTENDED (2002) [1080p].mp4
 Madagascar (2005) [1080p].mp4
 Maleficent (2014) [1080p].mp4
+Mamma Mia! Here We Go Again (2018) [1080p].mp4
 McLintock (1963).mp4
 Meet the Robinsons (2007) [1080p].mp4
 Megamind (2010) [720p].mp4
@@ -227,6 +232,12 @@ Pirates of the Caribbean III- At Worlds End (2007) [720p].mkv
 Pirates of the Caribbean IV- On Stranger Tides (2011) [720p].mkv
 [PM]
 Prince of Persia- Sands of Time (2010).avi
+[Psych S01]
+[Psych S02]
+[Psych S03]
+[Psych S04]
+[Psych S05]
+[Psych S07]
 Quest For Camelot (1998).avi
 Ready Player One (2018) [1080p].mp4
 Real Steel (2011) [1080p].mkv
@@ -249,6 +260,7 @@ Shark Tale (2004).avi
 [Sherlock S04]
 Shrek (2001) [720p].mp4
 Shrek 2 (2004) [1080p].mp4
+Shrek the Third (2007) [720p].mkv
 Skyscraper (2018) [1080p].mp4
 Source Code (2011) [1080p].mkv
 Spider-man (2002).avi
@@ -348,8 +360,8 @@ X-Men First Class (2011) [720p].mp4
 X-Men Origins Wolverine (2009) [1080p].mp4
 X-Men The Last Stand (2006) [1080p].mp4
 Zootopia (2016) [1080p].mp4
-             231 File(s) 320,525,708,594 bytes
-              95 Dir(s)  2,930,363,072,512 bytes free
+             237 File(s) 333,602,708,073 bytes
+             101 Dir(s)  2,882,476,703,744 bytes free
    </pre>
     </main>
 
