--- a/school/index.html
+++ b/school/index.html
@@ -1,1 +1,1 @@
-https://docs.google.com/presentation/d/159zJHrX93Ic_WbEXLA6rVkXxjGSPvCvWRp8SQFtIjHo/edit?usp=sharing
+<a href="https://docs.google.com/presentation/d/159zJHrX93Ic_WbEXLA6rVkXxjGSPvCvWRp8SQFtIjHo/edit?usp=sharing">Presentation</a>
