--- a/school/index.html
+++ b/school/index.html
@@ -1,1 +1,1 @@
-<a href="https://docs.google.com/presentation/d/159zJHrX93Ic_WbEXLA6rVkXxjGSPvCvWRp8SQFtIjHo/edit?usp=sharing">Presentation</a>
+<a href="https://drive.google.com/open?id=1LVOX3FnT-I_6AKjLbDaE3-hai2-U0ZPY">Grad Plan (WI19)</a>
