--- a/secret/H67MPW033X.html
+++ b/secret/H67MPW033X.html
@@ -17,15 +17,14 @@
     <p>In order to regenerate this page's name (frequency to be determined) go <a href="https://www.random.org/strings/" target="_blank">here</a> and use the CAPITAL letters option and numeric option. Length is ten.</p>
     <h1>LINKS</h1>
     <p>Background, ambient noise: <a href="https://www.ambient-mixer.com/" target="_blank">ambient-mixer</a></p>
-    <p>Hasher and un-hasher (AES): <a href="http://ncode.me/" target="_blank">ncodeme</a></p>
     <p>Stronger hashing: <a href="http://md5decrypt.net/en/" target="_blank">md5decrypt</a></p>
     <h1>DOWNLOADS</h1>
     <a href="./files/repository.exe" download>Repository</a><br/>
     <a href="./files/7za.exe" download>7Zip</a><br/>
     <a href="./files/nircmd.exe" download>nircmd</a><br/>
     <a href="./files/fork.cmd" download>Fork Bomb (Windows)</a><br/>
-    <a href="./files/7za_help.txt" download>7Zip help file</a><br/>
-    <a href="./files/endecrypt.exe" download>ENDECRYPT v2</a><br/>
+    <a href="./files/Dummy.exe" download>A program to create dummy files.</a><br/>
+    <a href="./files/REAPER.exe" download>My Reaper program.</a><br/>
 
 
     <br/><br/><button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
