--- a/secret/H67MPW033X.html
+++ b/secret/H67MPW033X.html
@@ -19,12 +19,12 @@
     <p>Background, ambient noise: <a href="https://www.ambient-mixer.com/" target="_blank">ambient-mixer</a></p>
     <p>Stronger hashing: <a href="http://md5decrypt.net/en/" target="_blank">md5decrypt</a></p>
     <h1>DOWNLOADS</h1>
-    <a href="./files/repository.exe" download>Repository</a><br/>
-    <a href="./files/7za.exe" download>7Zip</a><br/>
-    <a href="./files/nircmd.exe" download>nircmd</a><br/>
-    <a href="./files/fork.cmd" download>Fork Bomb (Windows)</a><br/>
-    <a href="./files/Dummy.exe" download>A program to create dummy files.</a><br/>
-    <a href="./files/REAPER.exe" download>My Reaper program.</a><br/>
+    <a href="/files/repository.exe" download>Repository</a><br/>
+    <a href="/files/7za.exe" download>7Zip</a><br/>
+    <a href="/files/nircmd.exe" download>nircmd</a><br/>
+    <a href="/files/fork.cmd" download>Fork Bomb (Windows)</a><br/>
+    <a href="/files/Dummy.exe" download>A program to create dummy files.</a><br/>
+    <a href="/files/REAPER.exe" download>My Reaper program.</a><br/>
 
 
     <br/><br/><button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
