--- a/tutorials/excel.html
+++ b/tutorials/excel.html
@@ -126,15 +126,15 @@
              <h3><i>vlookup</i></h3>
              <p>The <i>vlookup</i> function is used for looking up values in a table. The syntax is <code>=vlookup(<i>lookup_value</i>,<i>reference_table</i>,<i>column_to_return</i>,<i>exact_match_flag</i></code>. In the <a href="#fig19">figures</a>, I use the following function: <code>=vlookup(C1,A2:B4,2,FALSE)</code>. The lookup value (<i>C1</i>) references the cell where the first column value is entered (i.e. the input). The range after the first comment (<i>A2:B4</i>) is the table that I prepared to lookup values. The single integer (<i>2</i>) indicates that after the match is found in the first column, the second column value (in the same row) is returned. At the end of the function, the <i>FALSE</i> value indicates that an exact match in the first column must be found before the second column is returned. <a href="#fig19">Figure 19</a> shows one value searched in the table; <a href="#fig20">figure 20</a> shows another value searched. If an exact value cannot be found, <code>#N/A</code> is returned (see <a href="#fig21">Figure 21</a>).</p>
              <figure class="figure" id="fig19">
-               <img src="./../images/tutorials/excel/excel_vlookup.png" alt="vlookup function Mike"/>
+               <img src="./../images/tutorials/excel/excel_vlookup.PNG" alt="vlookup function Mike"/>
                <figcaption>vlookup function: "Mike"</figcaption>
              </figure>
              <figure class="figure" id="fig20">
-               <img src="./../images/tutorials/excel/excel_vlookup_2.png" alt="vlookup function Bob"/>
+               <img src="./../images/tutorials/excel/excel_vlookup_2.PNG" alt="vlookup function Bob"/>
                <figcaption>vlookup function: "Bob"</figcaption>
              </figure>
              <figure class="figure" id="fig21">
-               <img src="./../images/tutorials/excel/excel_vlookup_3.png" alt="vlookup function not found"/>
+               <img src="./../images/tutorials/excel/excel_vlookup_3.PNG" alt="vlookup function not found"/>
                <figcaption>vlookup function: not found"</figcaption>
              </figure>
            </div> <!-- end of function vlookup -->
