--- a/tutorials/excel.html
+++ b/tutorials/excel.html
@@ -135,7 +135,7 @@
              </figure>
              <figure class="figure" id="fig21">
                <img src="./../images/tutorials/excel/excel_vlookup_3.PNG" alt="vlookup function not found"/>
-               <figcaption>vlookup function: not found"</figcaption>
+               <figcaption>vlookup function: not found</figcaption>
              </figure>
            </div> <!-- end of function vlookup -->
         </div> <!-- end of functions -->
