Updated Bootstrap version
* updated Bootstrap CDN link (to latest Bootstrap version)
* attempting the container class from Bootstrap

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Dallin Snell">
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
     <!-- bootstrap stylesheet -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -25,7 +25,9 @@
       </ul>
     </header>
     <h1>Directory</h1>
-    <p>Hi! Welcome to my page. I created this website because I've always wanted to create a website (I find stuff like this really fun; weird, right?). I have two sections of the site, though. The first is a sort of blog-type setup. It might appear kind of random and scattered at times, but it does have some nuggets that you could find appealing. Also, if you're looking to find out more about me, this is the spot to go. The second part of the site is devoted to some simple tutorials I've created. I have been tinkering with computers my whole life and I've learned from some pretty knowledgeable people. On this side of the site, you can learn some of what I know. I cover a wide variety of topics ranging from Microsoft Office products to operating systems to computer security and more.</p>
+    <div class="container">
+      <p>Hi! Welcome to my page. I created this website because I've always wanted to create a website (I find stuff like this really fun; weird, right?). I have two sections of the site, though. The first is a sort of blog-type setup. It might appear kind of random and scattered at times, but it does have some nuggets that you could find appealing. Also, if you're looking to find out more about me, this is the spot to go. The second part of the site is devoted to some simple tutorials I've created. I have been tinkering with computers my whole life and I've learned from some pretty knowledgeable people. On this side of the site, you can learn some of what I know. I cover a wide variety of topics ranging from Microsoft Office products to operating systems to computer security and more.</p>
+    </div>
     <br><br><br>
     <h3>Sitemap:</h3>
       <ul>
