--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Home</title>
     <link rel="icon" href="./images/kali_icon.ico">
     <meta name="author" content="Dallin Snell">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- my stylesheet -->
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
     <!-- bootstrap stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -25,7 +27,7 @@
       </ul>
     </header>
     <h1>Directory</h1>
-    <div class="container">
+    <div class="welcome-paragraph">
       <p>Hi! Welcome to my page. I created this website because I've always wanted to create a website (I find stuff like this really fun; weird, right?). I have two sections of the site, though. The first is a sort of blog-type setup. It might appear kind of random and scattered at times, but it does have some nuggets that you could find appealing. Also, if you're looking to find out more about me, this is the spot to go. The second part of the site is devoted to some simple tutorials I've created. I have been tinkering with computers my whole life and I've learned from some pretty knowledgeable people. On this side of the site, you can learn some of what I know. I cover a wide variety of topics ranging from Microsoft Office products to operating systems to computer security and more.</p>
     </div>
     <br><br><br>
@@ -53,9 +55,9 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- bootstrap -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- bootstrap javascript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <!-- my scripts -->
     <script src="./scripts/scripts.js"></script>
   </body>
