--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </header>
     <h1>Directory</h1>
     <div class="welcome-paragraph">
-      <p>Hi! Welcome to my page. I created this website because I've always wanted to create a website (I find stuff like this really fun; weird, right?). I have two sections of the site, though. The first is a sort of blog-type setup. It might appear kind of random and scattered at times, but it does have some nuggets that you could find appealing. Also, if you're looking to find out more about me, this is the spot to go. The second part of the site is devoted to some simple tutorials I've created. I have been tinkering with computers my whole life and I've learned from some pretty knowledgeable people. On this side of the site, you can learn some of what I know. I cover a wide variety of topics ranging from Microsoft Office products to operating systems to computer security and more.</p>
+      <p>Hi! Welcome to my page. I created this website because I've always wanted to create a website (I find stuff like this really fun; weird, right?). I have two sections of the site, though. The first is a sort of blog-type setup. It might appear kind of random and scattered at times, but it does have some nuggets that you could find appealing. Also, if you're looking to find out more about me, this is the spot to go.</p>
+      <p>The second part of the site is devoted to some simple tutorials I've created. I have been tinkering with computers my whole life and I've learned from some pretty knowledgeable people. On this side of the site, you can learn some of what I know. I cover a wide variety of topics ranging from Microsoft Office products to operating systems to computer security and more.</p>
     </div>
     <br><br><br>
     <h3>Sitemap:</h3>
@@ -43,14 +44,18 @@
         <li>Tutorial side</li>
         <ul>
           <li><a href="./tutorials/excel.html">Excel</a></li>
+          <li><a href="#"><del>Word</del></a></li>
           <li><a href="./tutorials/c.html">C</a></li>
+          <li><a href="#"><del>C++</del></a></li>
           <li><a href="#"><del>Security</del></a></li>
+          <li><a href="#"><del>Compression</del></a></li>
+          <li><a href="#"><del>Windows Batch Scripting</del></a></li>
         </ul>
       </ul>
-    <!-- remove the footer positioning if the page scrolls -->
+    <!-- remove the footer positioning style if the page scrolls -->
     <footer class="pad" style="position: absolute; right: 0; bottom: 0;">
       <div class="right-align">
-        <p>Updated: 20 JUL 2018</p>
+        <p>Updated: 08 FEB 2019</p>
       </div>
     </footer>
 
