--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- my stylesheet -->
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
     <!-- fonts from Google -->
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Ubuntu:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Ubuntu" rel="stylesheet">
     <!-- bootstrap stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <!-- font awesome icons -->
