--- a/about/about.html
+++ b/about/about.html
@@ -58,14 +58,14 @@
       <div class="col-md-6 col-lg-4">
         <!-- links -->
         <h2>Links</h2>    <br/>
-        <h4><a href="./cheese.html">Random Cheese Facts!</a></h4>
-        <h4><a href="./squirrels.html">Some squirrels.</a></h4>
-        <h4><a href="./inspiration.html">If you need some inspiration.</a></h4>
+        <h4><a href="/cheese/cheese.html">Random Cheese Facts!</a></h4>
+        <h4><a href="/squirrels/squirrels.html">Some squirrels.</a></h4>
+        <h4><a href="/inspiration/inspiration.html">If you need some inspiration.</a></h4>
       </div>
     </div>
     <footer class="pad">
       <div class="right-align">
-        <p>Updated: 26 MAY 2018</p>
+        <p>Updated: 08 FEB 2019</p>
       </div>
     </footer>
   </body>
