Update tutorial excel,
* updated link map (removed a strikethrough)
* updated background color
* added more todos to README
* created external style sheet for Excel tutorial
* added stylesheet to Excel tutorial page
* created custom 404 page

--- a/tutorials/excel.html
+++ b/tutorials/excel.html
@@ -10,7 +10,7 @@
     </style>
     <title>Excel</title>
     <link rel="icon" href="./../images/excel_icon.ico"/>
-    <link rel="stylesheet" type="text/css" href="./../themes.css">
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
     <script src="./../scripts.js"></script>
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
@@ -21,7 +21,7 @@
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-color: #196F3D;">
+  <body class="excel-body">
     <div class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div>
@@ -233,7 +233,7 @@
             <li><a href="#function-min">min</a></li>
             <li><a href="#function-conditional">if</a></li>
             <li><a href="#function-count">count</a></li>
-            <li><a href="#function-vlookup"><del>vlookup</del></a></li>
+            <li><a href="#function-vlookup">vlookup</a></li>
             <!-- <li><a href="#"></a></li> -->
           </ul>
           <li><a href="#formatting">Formatting</a></li>
@@ -257,9 +257,9 @@
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div>
 
-    <footer style="padding: 10px;">
+    <footer class="excel-footer">
       <p id="suggestions">Thanks for reading! If you have any suggestions for the site feel free to shoot me an email at <a href="mailto:snellcorporate@gmail.com">snellcorporate@gmail.com</a>!</p>
-      <div style="text-align: right;">
+      <div style="">
         <p><a href="#">Go to top</a>&emsp;Updated: 04 FEB 2019</p>
       </div>
     </footer>
