Udpated broken links
* updated index.html footer positioning
* created blank placeholder file for /tutorials/main.js
* updated some outdated links in /tutorials/c.html
* updated styling for /tutorials/

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         </ul>
       </ul>
     <!-- remove the footer positioning style if the page scrolls -->
-    <footer class="pad" style="position: absolute; right: 0; bottom: 0;">
+    <footer class="pad">
       <div class="right-align">
-        <p>Updated: 08 FEB 2019</p>
+        <p>Updated: 18 FEB 2019</p>
       </div>
     </footer>
 
