--- a/tutorials/c.html
+++ b/tutorials/c.html
@@ -8,8 +8,8 @@
   <head>
     <title>Programming in C</title>
     <link rel="icon" href="./../images/tutorials/c/c-favicon.ico"/>
-    <link rel="stylesheet" type="text/css" href="./../themes.css">
-    <script src="./../scripts.js"></script>
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <script src="./scripts/main.js"></script>
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8" />
     <!-- Bootstrap links -->
@@ -27,7 +27,7 @@
       <ul class="page_links">
         <li class="page_links"><a href="./../index.html">Home</a></li>
         <li class="page_links"><a href="./excel.html">Excel</a></li>
-        <li class="page_links"><a href="./../inspiration.html">Inspiration</a></li>
+        <li class="page_links"><a href="./../inspiration/inspiration.html">Inspiration</a></li>
       </ul>
     </header>
 
