Updated TV listing

--- a/tv/index.html
+++ b/tv/index.html
@@ -14,7 +14,7 @@
 
     <main>
     <pre>
-    18 DEC 18
+    28 MAR 19
     
     
  Volume in drive E is FLEIJA
@@ -33,6 +33,7 @@ _index~17Sep24.txt
 _index~18Apr06.txt
 _index~18Apr22.txt
 _index~18Aug21.txt
+_index~18Dec10.txt
 _index~18Jan11.txt
 _index~18Jul06.txt
 _index~18May18.txt
@@ -46,11 +47,16 @@ A Wrinkle In Time (2018) [720p].mp4
 [Agents of S.H.I.E.L.D. S02]
 [Agents of S.H.I.E.L.D. S03]
 [Agents of S.H.I.E.L.D. S04]
+[Agents of S.H.I.E.L.D. S05]
 Aladdin (1992) [1080p].mkv
 American Sniper (2014) [1080p].mp4
 Angels and Demons (2009) [720p].mkv
 Ant-Man (2015) [1080p].mp4
 Armageddon (1998) [720p].mkv
+[Arrow S01]
+[Arrow S02]
+[Arrow S03]
+[Arrow S04]
 Atlantis (2001).avi
 Avengers (2012) [1080p].mp4
 Avengers- Age of Ultron (2015) [1080p].mp4
@@ -58,6 +64,7 @@ Avengers- Infinity War (2018) [720p].mkv
 [Ballers S01]
 [Ballers S02]
 [Ballers S03]
+[Ballers S04]
 Batman Begins (2005) [720p].mkv
 Batman- The Dark Knight (2008) [720p].mkv
 [Batman v Superman- Dawn of Justice EXTENDED (2016) [1080p]]
@@ -85,6 +92,7 @@ Cinderella (2015) [1080p].mp4
 Clash of the Titans (2010) [720p].mkv
 Cool Runnings (1993) [1080p].mp4
 Corpse Bride (2005) [720p].mp4
+Crazy Stupid Love (2011) [720p].mp4
 [DB]
 Despicable Me (2010) [1080p].mp4
 Divergent (2014) [720p].mp4
@@ -105,6 +113,7 @@ Eagle Eye (2008) [720p].mp4
 [Elementary S03]
 [Elementary S04]
 [Elementary S05]
+[Elementary S06]
 Enchanted (2007) [1080p].mp4
 Entrapment (1999) [720p].mkv
 Fantastic Beasts and Where to Find Them (2016) [1080p].mp4
@@ -206,6 +215,7 @@ Mission Impossible II (2000) [720p].mkv
 Mission Impossible III (2006) [720p].mkv
 Moana (2016) [1080p].mkv
 Monster University (2013) [720p].mkv
+Monsters Inc. (2001) [1080p].mp4
 Mr. and Mrs. Smith (2005) [720p].mp4
 Muppet Treasure Island (1996) [720p].mp4
 Music and Lyrics (2007) [720p].mp4
@@ -219,9 +229,11 @@ My Fair Lady (1964) [1080p].mp4
 [NCIS- NO S01]
 [NCIS S01]
 [NCIS S02 (incomplete)]
+New Years Eve (2011) [720p].mp4
 Now You See Me (2013) [1080p].mp4
 Now You See Me 2 (2016) [1080p].mkv
 Oceans Eight (2018) [720p].mkv
+[Once Upon A Time S01]
 Oscar (1991) [720p].mp4
 Pacific Rim (2013) [720p].mp4
 Penguins of Madagascar (2014) [1080p].mp4
@@ -230,6 +242,9 @@ Pirates of the Caribbean I- Curse of the Black Pearl (2003) [720p].mkv
 Pirates of the Caribbean II- Dead Mans Chest (2006) [720p].mkv
 Pirates of the Caribbean III- At Worlds End (2007) [720p].mkv
 Pirates of the Caribbean IV- On Stranger Tides (2011) [720p].mkv
+Pitch Perfect (2012) [1080p].mp4
+Pitch Perfect 2 (2015) [720p].mp4
+Pitch Perfect 3 (2017) [1080p].mp4
 [PM]
 Prince of Persia- Sands of Time (2010).avi
 [Psych S01]
@@ -283,6 +298,7 @@ The Addams Family (1991) [720p].mp4
 [The Big Bang Theory S02]
 [The Big Bang Theory S03]
 [The Big Bang Theory S04]
+[The Big Bang Theory S12]
 The Boss Baby (2017) [1080p].mkv
 The Bourne Identity (2002).mkv
 The Bourne Supremacy (2004) [720p].mkv
@@ -342,12 +358,15 @@ Tron Legacy (2010) [1080p].mp4
 TV_quality_check.txt
 [Under The Dome S01]
 [Under the Dome S03]
+Valentine's Day (2010) [1080p].mp4
+Venom (2018) [720p].avi
 [Vikings S01]
 WALL-E (2008) [1080p].mp4
 War For the Planet of the Apes (2017) [1080p].mp4
 [Westworld S01]
 [Westworld S02]
 When Sparks Fly (2014) [720p].mp4
+White Chicks (2004) [1080p].mp4
 White House Down (2013) [720p].mkv
 Wonder Woman (2017) [1080p].mp4
 Wrath of the Titans (2012) [1080p].mp4
@@ -360,8 +379,8 @@ X-Men First Class (2011) [720p].mp4
 X-Men Origins Wolverine (2009) [1080p].mp4
 X-Men The Last Stand (2006) [1080p].mp4
 Zootopia (2016) [1080p].mp4
-             237 File(s) 333,602,708,073 bytes
-             101 Dir(s)  2,882,476,703,744 bytes free
+             247 File(s) 349,725,912,469 bytes
+             110 Dir(s)  2,786,433,433,600 bytes free
    </pre>
     </main>
 
