--- a/ORA/autocomplete.html
+++ b/ORA/autocomplete.html
@@ -1,5 +1,5 @@
 <!-- Snell, Dallin
--- 23 APR 2019
+     23 APR 2019
 -->
 
 
@@ -12,6 +12,35 @@
     <meta name="author" content="Dallin Snell">
   </head>
   <body>
-  
+    <table>
+      <tr>
+        <th>Prompt</th>
+        <th>Autocomplete</th>
+      </tr>
+      <tr>
+        <td>Can I get</td>
+        <td>Can I get your I-Number from you?</td>
+      </tr>
+      <tr>
+        <td>Is there</td>
+        <td>Is there anything else I can do for you tonight?</td>
+      </tr>
+      <tr>
+        <td>000</td>
+        <td>000000000</td>
+      </tr>
+      <tr>
+        <td>Thanks for</td>
+        <td>Thanks for contacting us. Have a great day!</td>
+      </tr>
+      <tr>
+        <td>Are you currently</td>
+        <td>Are you currently a student here? If so, do you mind if I grab your I-Number from you?</td>
+      </tr>
+      <tr>
+        <td>Are you an online</td>
+        <td>Are you an online student or a campus student?</td>
+      </tr>
+    </table>
   </body>
 </html>
