--- a/ORA/autocomplete.html
+++ b/ORA/autocomplete.html
@@ -10,6 +10,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Outreach Assistant Autocomplete</title>
     <meta name="author" content="Dallin Snell">
+    <style>
+      table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+    </style>
   </head>
   <body>
     <table>
