--- a/ORA/autocomplete.html
+++ b/ORA/autocomplete.html
@@ -11,6 +11,10 @@
     <title>Outreach Assistant Autocomplete</title>
     <meta name="author" content="Dallin Snell">
     <style>
+      table {
+        width:100%
+      }
+      
       table, th, td {
         border: 1px solid black;
         border-collapse: collapse;
