--- a/ORA/autocomplete.html
+++ b/ORA/autocomplete.html
@@ -9,7 +9,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Outreach Assistant Autocomplete</title>
+    <title>Outreach Assistant autocomplete</title>
     <meta name="author" content="Dallin Snell">
     <style>
       table {
