--- a/ORA/autocompleteexamples.html
+++ b/ORA/autocompleteexamples.html
@@ -9,7 +9,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Outreach Assistant autocomplete</title>
+    <title>Outreach Assistant autocomplete examples</title>
     <meta name="author" content="Dallin Snell">
     <style>
       table {
