--- a/ORA/ORA_EULA.html
+++ b/ORA/ORA_EULA.html
@@ -7,50 +7,50 @@
     <meta name="author" content="Dallin Snell">
   </head>
   <body>
-    <pre>
-End-User License Agreement (EULA) of Outreach Assistant
+    <h1>End-User License Agreement (EULA) of Outreach Assistant</h1>
 
-This End-User License Agreement ("EULA") is a legal agreement between you and Dallin Snell
+    <p>This End-User License Agreement ("EULA") is a legal agreement between you and Dallin Snell</p>
 
-This EULA agreement governs your acquisition and use of the Outreach Assistant software ("Software") directly from Dallin Snell or indirectly through an reseller or distributor (a "Reseller") authorizd by Dallin Snell.
+    <p>This EULA agreement governs your acquisition and use of the Outreach Assistant software ("Software") directly from Dallin Snell or indirectly through an reseller or distributor (a "Reseller") authorizd by Dallin Snell.</p>
 
-Please read this EULA agreement carefully before completing the installation process and using the Outreach Assistant software. It provides a license to use the Outreach Assistant software and contains warranty information and liability disclaimers.
+    <p>Please read this EULA agreement carefully before completing the installation process and using the Outreach Assistant software. It provides a license to use the Outreach Assistant software and contains warranty information and liability disclaimers.</p>
 
-If you register for a free trial of the Outreach Assistant software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the Outreach Assistant software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.
+    <p>If you register for a free trial of the Outreach Assistant software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the Outreach Assistant software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.</p>
 
-If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.
+    <p>If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.</p>
 
-This EULA agreement shall apply only to the Software supplied by Dallin Snell herewith regardless of whether other software is referred to or described herein. The terms also apply to any updates, supplements, Internet-based services, and support services for the Software by Dallin Snell, unless other terms accompany those items on delivery. If so, those terms apply.
+    <p>This EULA agreement shall apply only to the Software supplied by Dallin Snell herewith regardless of whether other software is referred to or described herein. The terms also apply to any updates, supplements, Internet-based services, and support services for the Software by Dallin Snell, unless other terms accompany those items on delivery. If so, those terms apply.</p>
 
-License Grant
+    <h2>License Grant</h2>
 
-Dallin Snell hereby grants you a personal, non-transferable, non-exclusive licence to use the Outreach Assistant software on your devices in accordance with the terms of this EULA agreement.
+    <p>Dallin Snell hereby grants you a personal, non-transferable, non-exclusive licence to use the Outreach Assistant software on your devices in accordance with the terms of this EULA agreement.</p>
 
-You are permitted to load the Outreach Assistant software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the Outreach Assistant software.
+    <p>You are permitted to load the Outreach Assistant software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the Outreach Assistant software.</p>
 
-You are not permitted to:
+    <p>You are not permitted to:</p>
 
-- Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things
-- Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose
-- Allow any third party to use the Software on behalf of or for the benefit of any third party
-- Use the Software in any way which breaches any applicable local, national or international law
-- Use the Software for any purpose that Dallin Snell considers is a breach of this EULA agreement
+    <ul>
+      <li>Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things</li>
+      <li>Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose</li>
+      <li>Allow any third party to use the Software on behalf of or for the benefit of any third party</li>
+      <li>Use the Software in any way which breaches any applicable local, national or international law</li>
+      <li>Use the Software for any purpose that Dallin Snell considers is a breach of this EULA agreement</li>
+    </ul>
 
-Intellectual Property and Ownership
+    <h2>Intellectual Property and Ownership</h2>
 
-Dallin Snell shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of Dallin Snell.
+    <p>Dallin Snell shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of Dallin Snell.</p>
 
-Dallin Snell reserves the right to grant licences to use the Software to third parties.
+    <p>Dallin Snell reserves the right to grant licences to use the Software to third parties.</p>
 
-Termination
+    <h2>Termination</h2>
 
-This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to Dallin Snell.
+    <p>This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to Dallin Snell.</p>
 
-It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.
+    <p>It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.</p>
 
-Governing Law
+    <h2>Governing Law</h2>
 
-This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of us.
-    </pre>
+    <p>This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of us.</p>
   </body>
 </html>
