--- a/BYUI/AD/index.html
+++ b/BYUI/AD/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Dallin Snell">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bitter|Libre+Franklin&display=swap" rel="stylesheet">
-    <link type="text/css" href="./styles/styles.css" rel="stylesheet">
+    <link type="text/css" href="./styles/styles.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="accordion">
@@ -76,7 +76,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script>
-    <script src="./scripts/scripts.js" type="text/javascript"></script>
+    <script src="./scripts/scripts.min.js" type="text/javascript"></script>
   </body>
   
   <footer>
