--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -14,7 +14,10 @@
     <meta name="keywords" content="keywords,here">
   </head>
   <body>
-  
+    <label>PLAINTEXT</label>
+    <div id="plaintext"></div>
+    <label>CIPHERTEXT</label>
+    <div id="ciphertext"></div>
   
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
