--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <label>PLAINTEXT</label>
-    <div id="plaintext"></div>
+    <div id="plaintext">Dallin</div>
+    <button onclick="ENCRYPTING(Dallin);">Encrypt</button>
     <label>CIPHERTEXT</label>
     <div id="ciphertext"></div>
   
