--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -16,7 +16,7 @@
   <body>
     <label>PLAINTEXT</label>
     <div id="plaintext">Dallin</div>
-    <button onclick="ENCRYPTING("Dallin");">Encrypt</button>
+    <button onclick="ENCRYPTING("Dallin")">Encrypt</button>
     <label>CIPHERTEXT</label>
     <div id="ciphertext"></div>
   
