--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <label>PLAINTEXT</label><input type="text" id="PLAINTEXT" name="message">
-    <button onclick="ENCRYPTING()">Encrypt</button>
+    <button onclick="ENCRYPTING()">Encrypt</button><br>
     <label>CIPHERTEXT</label>
     <div id="ciphertext"></div>
   
