--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -1,7 +1,14 @@
 <!-- Snell, Dallin
      31 MAY 2019
 -->
++
 
+
+<!-- TODOs
+* create encrypt input field and decrypt field
+* finish Javascript encrypt/decrypt functions
+* beautify
+-->
 
 <!DOCTYPE html>
 <html>
