--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -24,6 +24,7 @@
     <input type="password" id="PASSKEY" placeholder="password"><br>
     <button onclick="ENCRYPTING()">Encrypt</button>
     <button onclick="DECRYPTING()">Decrypt</button><br>
+    <button onclick="CLEAR()">Clear</button><br>
     <textarea id="PLAINTEXT" placeholder="message to encrypt"></textarea><br>
     <label>CIPHERTEXT</label><br>
     <textarea id="CIPHERTEXT" placeholder="encrypted message" readonly></textarea>
