--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -25,7 +25,7 @@
     <button onclick="ENCRYPTING()">Encrypt</button>
     <button onclick="DECRYPTING()">Decrypt</button><br>
     <button onclick="CLEAR()">Clear</button><br>
-    <textarea id="PLAINTEXT" placeholder="message to encrypt"></textarea><br>
+    <textarea id="PLAINTEXT" placeholder="message to encrypt"></textarea>
     <textarea id="CIPHERTEXT" placeholder="encrypted message" readonly></textarea>
     
     <hr>
