--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -25,10 +25,11 @@
     <button onclick="ENCRYPTING()">Encrypt</button>
     <button onclick="DECRYPTING()">Decrypt</button><br>
     <button onclick="CLEAR()">Clear</button><br>
+    <hr>
+    <!-- decrypt to encrypt textboxes -->
     <textarea id="PLAINTEXT" placeholder="message to encrypt"></textarea>
     <textarea id="CIPHERTEXT" placeholder="encrypted message" readonly></textarea>
-    
-    <hr>
+    <!-- encrypt to decrypt textboxes -->
     <textarea id="ENCRYPTED" placeholder="message to decrypt"></textarea>
     <textarea id="DECRYPTED" placeholder="decrypted message"></textarea>
   
